--- a/README
+++ b/README
@@ -1,3 +1,19 @@
-Nothing here yet.
+X-igar v0.1 x 10^-23
+====================
 
-Test :)
+Minimum requirements
+--------------------
+
+[ROOT](http://root.cern.ch/drupal/content/downloading-root)
+[XSPEC + FTOOLS](http://heasarc.nasa.gov/docs/software/lheasoft/download.html) -- `remember to select FTOOLS along with XSPEC`
+FORTRAN compiler
+
+Setup
+-----
+
+Edit settings.sh and settings.tcl to point to the correct directories.
+
+Usage
+-----
+
+Run xigar.sh and prosper.
